--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
-/* This 
-is 
+/* This
+is
 a comment! */
 
 /* CSS Syntax:
@@ -69,4 +69,67 @@ figcaption {
 
 #details a:active {
   color: red;
+}
+
+section{
+  margin-bottom: :20px;
+  padding: 20px;
+}
+.wrapper {
+  width: 960px;
+  margin: 0 auto;
+  background-color: #eee;
+}
+
+.col-1{
+  float: left;
+  width: 32%;
+  background-color: #ccc;
+}
+.col-2{
+  float:left;
+  width: 66%;
+  background-color: #ccc;
+}
+.col-3{
+  background-color: #ccc;
+}
+[class*="col-"] {
+  margin-left: 2%;
+}
+.first{
+  margin-left:0%;
+}
+
+.clear-fix:after {
+  content:".";
+  display: block;
+  clear:both;
+  visibility: hidden;
+  height:0;
+  line-height: 0;
+}
+
+img, video, audio{
+  max-width: 100%;
+}
+
+*{
+  box-sizing: border-box;;
+  -moz-box-sizing: border-box
+  -webkit-box-sizing: border-box
+}
+<!-- SOCIAL------------>
+#social {
+  position:fixed;
+  top:200px;
+  right:20px;
+  z-index:1;
+  width:40px;
+}
+#social a{
+  display: block;
+  width:40px;
+  height :40px;
+  background: yellowl
 }
