--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,14 @@ figcaption {
   color: red;
 }
 
+header {
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  background:#fff;
+  z-index:1;
+}
 section{
   margin-bottom: :20px;
   padding: 20px;
